syntax = "proto3";
import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";

option go_package = "gen.frontend;servergrpc";

package frontend;

message Account {
  string username = 1;
  string fullName = 2;
  int64 id = 3;
  string password = 4;
}

service Users {
  rpc login(google.protobuf.Empty)returns(LoginResult){}
}

message LoginResult {
  BaseError error = 1;
  Account account = 2;
  Session session = 3;
}

// common types
message ValidationError {
  string param = 1;
  string message = 2;
  string reason = 3;
  google.protobuf.Any value = 4;
}

message UpdateRequiredError {
  int64 requiredVersion = 2;
}

message CommonErrors {
  ValidationError validationError = 1;
  UpdateRequiredError updateRequiredError = 3;
}

message BaseError {
  CommonErrors commonErrors = 1;
  string message = 2;
  string reason = 3;
  string details = 4;
}

message Session {
  string Token = 1;
}

// Contacts

message Contact {
  int64 id = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
  int64 accountId = 5;
}

service Contacts {
  rpc createOrUpdate(Contact)returns(ContactResult){}
  rpc delete(Contact)returns(BaseError){}
  rpc search(Contact)returns(ContactListResult){}
}

message ContactListResult {
  repeated Contact items = 1;
  BaseError error = 2;
}

message ContactResult {
  Contact result = 1;
  BaseError error = 2;
}
